# ScamSama

./: .env.example  .gitignore  README.md  launcher.py  pyproject.toml  requirements.txt
src/: config.py  discord_bot.py  main.py  neuro_websockets.py  state.py  twilio_integration.py  web_server.py
src/neuro_api/middlebot/: __init__.py  actions.py
src/scam_sama/: __init__.py  config.py  discord_bot.py  main.py  neuro_websockets.py  state.py  twilio_integration.py  web_server.py
